force-app/main/default/objects/Sales_Support_Request__c/Sales_Support_Request__c.object-meta.xml
<CustomObject>
    <description>This object is for requests from the Sales team to the Sales Support team. E.g. Contract and Quote requests.</description>
    <label>Sales Support Request</label>
    <nameField>
        <displayFormat>GNR-{0000000}</displayFormat>
        <label>Sales Support Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Support Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>