force-app/main/default/objects/Sales_Support_Request__c/fields/Account_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Account_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Lookup</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Support Requests</relationshipLabel>
    <relationshipName>Sales_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>