force-app/main/default/objects/Sales_Support_Request__c/fields/Bespoke_Supplier_Rental_Cost__c.field-meta.xml
<CustomField>
    <fullName>Bespoke_Supplier_Rental_Cost__c</fullName>
    <label>Bespoke Supplier Rental Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>