force-app/main/default/objects/Sales_Support_Request__c/fields/Billing_Reference__c.field-meta.xml
<CustomField>
    <fullName>Billing_Reference__c</fullName>
    <label>Billing Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>