force-app/main/default/objects/Sales_Support_Request__c/fields/Cease_dependent_on_a_new_circuit__c.field-meta.xml
<CustomField>
    <fullName>Cease_dependent_on_a_new_circuit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cease dependent on a new circuit</label>
    <type>Checkbox</type>
</CustomField>