force-app/main/default/objects/Sales_Support_Request__c/fields/Circuit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Circuit_Reference__c</fullName>
    <label>Circuit Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>