force-app/main/default/objects/Sales_Support_Request__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the related contact from the Contact object.</description>
    <label>Contact Lookup</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Support Requests</relationshipLabel>
    <relationshipName>Sales_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>