force-app/main/default/objects/Sales_Support_Request__c/fields/Customer_Request_Cease_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Request_Cease_Date__c</fullName>
    <label>Customer Request Cease Date</label>
    <type>Date</type>
</CustomField>