force-app/main/default/objects/Sales_Support_Request__c/fields/Est_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Est_Close_Date__c</fullName>
    <label>Est Close Date</label>
    <type>Date</type>
</CustomField>