force-app/main/default/objects/Sales_Support_Request__c/fields/Lead_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Lead_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the related lead from the lead object.</description>
    <label>Lead Lookup</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Sales Support Requests</relationshipLabel>
    <relationshipName>Sales_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>