force-app/main/default/objects/Sales_Support_Request__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>This field is for the Sales Team to add in information that is necessary for the request such as the quote.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>