force-app/main/default/objects/Sales_Support_Request__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <inlineHelpText>The field is for specifying the requested product/s that need to be in the quote or contract.</inlineHelpText>
    <label>Product</label>
    <type>TextArea</type>
</CustomField>