force-app/main/default/objects/Sales_Support_Request__c/fields/Service_Cease_Date_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Cease_Date_Request__c</fullName>
    <label>Service Cease Date Request</label>
    <type>Date</type>
</CustomField>