force-app/main/default/objects/Sales_Support_Request__c/fields/Supplier_Quote_Reference__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Quote_Reference__c</fullName>
    <label>Supplier Quote Reference</label>
    <length>30</length>
    <type>Text</type>
</CustomField>