force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Cease_Request.recordType-meta.xml
<RecordType>
    <fullName>Cease_Request</fullName>
    <active>true</active>
    <label>Cease Request</label>
</RecordType>