force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Contract_Request.recordType-meta.xml
<RecordType>
    <fullName>Contract_Request</fullName>
    <active>true</active>
    <label>Contract Request</label>
</RecordType>