force-app/main/default/objects/Sales_Support_Request__c/recordTypes/MSA_Request.recordType-meta.xml
<RecordType>
    <fullName>MSA_Request</fullName>
    <active>true</active>
    <label>MSA Request</label>
</RecordType>