force-app/main/default/objects/Sales_Support_Request__c/recordTypes/Quote_Request.recordType-meta.xml
<RecordType>
    <fullName>Quote_Request</fullName>
    <active>true</active>
    <label>Quote Request</label>
</RecordType>