force-app/main/default/objects/Sales_Support_Request__c/listViews/Cease_Request.listView-meta.xml
<ListView>
    <fullName>Cease_Request</fullName>
    <columns>NAME</columns>
    <columns>Account_Lookup__c</columns>
    <columns>Circuit_Reference__c</columns>
    <columns>Customer_Request_Cease_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Sales_Support_Request__c.Cease_Request</value>
    </filters>
    <label>Cease Request</label>
</ListView>